# sam3-cpu

./: .gitignore  CHUNKING_AND_RANGE_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_UPDATE_SECTIONS.md  SECURITY.md  TODO.md  config.json  demo.py  demo_image.py  image_prompter.py  main.py  pyproject.toml  sanity_test.py  setup.sh  simple_demo.py  test_chain_tracking.py  test_chunk_iou_matching.py  test_chunk_overlap.py  test_chunking_fix.py  test_chunking_output.py  test_chunks_injection.py  test_cross_chunk_injection.py  test_cross_object_iou.py  test_gpu_vram.py  test_image_results.json  test_iou.py  test_lossless.py  test_lossless_iou.py  test_postprocessor_isolated.py  test_quick.py  test_video_api.py  tester.py  update_version.sh  validate.py  video_prompter.py
.github/: PULL_REQUEST_TEMPLATE.md  version_update.yaml
examples/: example_a_image_with_prompts.py  example_b_image_with_boxes.py  example_c_batch_images_with_prompts.py  example_d_batch_images_with_boxes.py  example_e_video_with_prompts.py  example_f_video_with_points.py  example_g_refine_video_object.py  example_h_remove_video_objects.py  example_i_video_with_segments.py  image_example.py  profiler_example.py  run_all_examples.py  test_modular_api_image.py  test_modular_api_video.py  test_postprocessing.py  test_postprocessing_real.py  video_example.py
notebook/: image_predictor_example.ipynb  sam3_image_interactive.ipynb
sam3/: __globals.py  __init__.py  api.py  chunk_processor.py  driver.py  drivers.py  entry.py  entrypoint.py  ffmpeglib.py  image_processor.py  logger.py  memory_manager.py  memory_manager.py.bak  (+8 more)
(+43 files in other folders)
